--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <version>5.2.9.Final</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>4.2.5.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <properties>
